# tsduck

./: .clang-format  .editorconfig  .envrc  .gitattributes  .gitignore  .travis.yml  BUILDING.txt  CHANGELOG.txt  CMakeLists.txt  CONFIG.txt  CONTRIBUTORS.txt  Dockerfile.mayhem  LICENSE  LICENSE.txt  METRICS.md  Makefile  Makefile.common  Makefile.inc  Makefile.tsduck  Mayhemfile  OTHERS.txt  README.md  README.txt  TODO.txt  flake.nix  meson.build
src/libtsduck/: Makefile  README.txt  meson.build  sky_it.dict  sky_uk.dict  tsAACDescriptor.cpp  tsAACDescriptor.h  tsAC3Attributes.cpp  tsAC3Attributes.h  tsAC3Descriptor.cpp  tsAC3Descriptor.h  tsAC4Descriptor.cpp  tsAC4Descriptor.h  tsAES.cpp  tsAES.h  tsAIT.cpp  tsAIT.h  tsATSCAC3AudioStreamDescriptor.cpp  tsATSCAC3AudioStreamDescriptor.h  tsATSCEAC3AudioDescriptor.cpp  tsATSCEIT.cpp  tsATSCEIT.h  tsATSCMultipleString.cpp  tsATSCMultipleString.h  tsATSCStuffingDescriptor.cpp  tsATSCStuffingDescriptor.h  tsATSCTimeShiftedServiceDescriptor.cpp  tsATSCTimeShiftedServiceDescriptor.h  tsAVCAttributes.cpp  tsAVCAttributes.h  tsAVCHRDParameters.cpp  tsAVCHRDParameters.h  tsAVCParser.cpp  tsAVCParser.h  tsAVCParserTemplate.h  tsAVCSequenceParameterSet.cpp  tsAVCSequenceParameterSet.h  tsAVCTimingAndHRDDescriptor.cpp  tsAVCTimingAndHRDDescriptor.h  tsAVCVUIParameters.cpp  (+1067 more)
src/libtsduck/app/: tsLibTSDuckVersion.cpp  tsLibTSDuckVersion.h
src/libtsduck/base/: tsAbortInterface.cpp  tsAbortInterface.h  tsAbstractOutputStream.cpp  tsAbstractOutputStream.h  tsAbstractReadStreamInterface.cpp  tsAbstractReadStreamInterface.h  tsAbstractWriteStreamInterface.cpp  tsAbstractWriteStreamInterface.h  tsAlgorithm.h  tsAlgorithmTemplate.h  tsApplicationSharedLibrary.cpp  tsApplicationSharedLibrary.h  tsArgMix.cpp  tsArgMix.h  tsArgMixTemplate.h  tsArgs.cpp  tsArgs.h  tsArgsSupplierInterface.cpp  tsArgsSupplierInterface.h  tsArgsTemplate.h  tsAsyncReport.cpp  tsAsyncReport.h  tsAsyncReportArgs.cpp  tsAsyncReportArgs.h  tsBCD.cpp  tsBCD.h  tsBitStream.cpp  tsBitStream.h  tsBitStreamTemplate.h  tsBoolPredicate.cpp  tsBoolPredicate.h  tsBuffer.cpp  tsBuffer.h  tsBufferTemplate.h  tsByteBlock.cpp  tsByteBlock.h  tsByteSwap.h  tsCOM.cpp  tsCOM.h  tsCerrReport.cpp  (+178 more)
src/libtsduck/config/: 80-tsduck.perms  80-tsduck.rules  Makefile  README.txt  tsduck.channels.model.xml  tsduck.dektec.names  tsduck.dtv.references  tsduck.dtv.skeleton.names  tsduck.etuner.model.xml  tsduck.hfbands.model.xml  tsduck.hfbands.xml  tsduck.hides.names  tsduck.ip.names  tsduck.keytable.model.xml  tsduck.lnbs.model.xml  tsduck.lnbs.xml  tsduck.monitor.model.xml  tsduck.monitor.xml  tsduck.names  tsduck.oui.names  tsduck.pc  tsduck.skeleton.names  tsduck.tables.model.xml  tsduck.tables.skeleton.xml  tsduck.time.model.xml  tsduck.time.xml
src/libtsduck/crypto/: tsAES.accel.cpp  tsAES.cpp  tsAES.h  tsAES128.cpp  tsAES128.h  tsAES256.cpp  tsAES256.h  tsBetterSystemRandomGenerator.cpp  tsBetterSystemRandomGenerator.h  tsBlockCipher.cpp  tsBlockCipher.h  tsBlockCipherAlertInterface.cpp  tsBlockCipherAlertInterface.h  tsBlockCipherProperties.cpp  tsBlockCipherProperties.h  tsCBC.h  tsCBCTemplate.h  tsCRC32.accel.cpp  tsCRC32.cpp  tsCRC32.h  tsCTR.h  tsCTRTemplate.h  tsCTS1.h  tsCTS1Template.h  tsCTS2.h  tsCTS2Template.h  tsCTS3.h  tsCTS3Template.h  tsCTS4.h  tsCTS4Template.h  tsCipherChaining.cpp  tsCipherChaining.h  tsCipherChainingTemplate.h  tsCryptoLibrary.cpp  tsCryptoLibrary.h  tsDES.cpp  tsDES.h  tsDVBCISSA.cpp  tsDVBCISSA.h  tsDVBCSA2.cpp  (+32 more)
src/libtsduck/dektec/: README.md  tsDVBT2ParamsEvaluator.cpp  tsDVBT2ParamsEvaluator.h  tsDektecControl.cpp  tsDektecControl.h  tsDektecDeviceInfo.cpp  tsDektecDeviceInfo.h  tsDektecInputPlugin.cpp  tsDektecInputPlugin.h  tsDektecOutputPlugin.cpp  tsDektecOutputPlugin.h  tsDektecSupport.cpp  tsDektecSupport.h  tsDektecUtils.cpp  tsDektecUtils.h
src/tsplugins/: CMakeLists.txt  Makefile  meson.build  tsplugin_aes.cpp  tsplugin_analyze.cpp  tsplugin_bat.cpp  tsplugin_bitrate_monitor.cpp  tsplugin_boostpid.cpp  tsplugin_cat.cpp  tsplugin_clear.cpp  tsplugin_continuity.cpp  tsplugin_count.cpp  tsplugin_craft.cpp  tsplugin_cutoff.cpp  tsplugin_datainject.cpp  tsplugin_decap.cpp  tsplugin_dektec.cpp  tsplugin_descrambler.cpp  tsplugin_drop.cpp  tsplugin_dsmcc.cpp  tsplugin_dump.cpp  tsplugin_duplicate.cpp  tsplugin_dvb.cpp  tsplugin_eit.cpp  tsplugin_eitinject.cpp  tsplugin_emm_monitor.cpp  tsplugin_encap.cpp  tsplugin_feed.cpp  tsplugin_file.cpp  tsplugin_filter.cpp  tsplugin_flute.cpp  tsplugin_fork.cpp  tsplugin_fuzz.cpp  tsplugin_generic.cpp  tsplugin_hides.cpp  tsplugin_history.cpp  tsplugin_hls.cpp  tsplugin_http.cpp  tsplugin_iat.cpp  tsplugin_identify.cpp  (+66 more)
src/tstools/: CMakeLists.txt  Makefile  meson.build  tsanalyze.cpp  tsbitrate.cpp  tscharset.cpp  tscmp.cpp  tscrc32.cpp  tsdate.cpp  tsdebug.cpp  tsdektec.cpp  tsdsmcc.cpp  tsduck-completion.bash  tsdump.cpp  tsecmg.cpp  tseit.cpp  tsemmg.cpp  tsfclean.cpp  tsfixcc.cpp  tsflute.cpp  tsftrunc.cpp  tsfuzz.cpp  tsgenecm.cpp  tsgentab.cpp  tshides.cpp  tslatencymonitor.cpp  tslsdvb.cpp  tsnip.cpp  tsp.cpp  tspControlServer.cpp  tspControlServer.h  tspInputExecutor.cpp  tspInputExecutor.h  tspJointTermination.cpp  tspJointTermination.h  tspListProcessors.cpp  tspListProcessors.h  tspOptions.cpp  tspOptions.h  tspOutputExecutor.cpp  (+32 more)
src/utest/: .gitignore  CMakeLists.txt  Makefile  dependenciesForStaticLib.cpp  tsunit.cpp  tsunit.h  utest.cpp  utestARIBCharset.cpp  utestAlgorithm.cpp  utestArgs.cpp  utestBCD.cpp  utestBase64.cpp  utestBitStream.cpp  utestBoolPredicate.cpp  utestBuffer.cpp  utestByteBlock.cpp  utestByteSwap.cpp  utestCRC32.cpp  utestChannels.cpp  utestCodecs.cpp  utestCommandLine.cpp  utestCompactBitSet.cpp  utestConfig.cpp  utestContinuity.cpp  utestCppUnitMain.cpp  utestCppUnitMain.h  utestCppUnitTest.cpp  utestCppUnitTest.h  utestCppUnitThread.cpp  utestCppUnitThread.h  utestCrypto.cpp  utestDSMCC.cpp  utestDSMCCBIOP.cpp  utestDSMCCCarousel.cpp  utestDSMCCModuleAssembler.cpp  utestDVB.cpp  utestDVBCharset.cpp  utestDataBlock.cpp  utestDemux.cpp  utestDescriptor.cpp  (+92 more)
(+6548 files in other folders)
